hphp/test/zend/good/ext/ftp/tests/bug7216.php
<?php
$bug7216=true;
require 'server.inc';

$ftp = ftp_connect('127.0.0.1', $port);
if (!$ftp) die("Couldn't connect to the server");

var_dump(ftp_login($ftp, 'anonymous', 'IEUser@'));
var_dump(ftp_mkdir($ftp, 'CVS'));

?>